# jeopardy-training-app

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_srs_cards.sql  0002_search_index.sql  0003_adaptive_targeting.sql  0004_blindspot_learning.sql  0005_mock_test_and_attempt_kind.sql  0006_primers.sql  0007_deck_snapshots.sql  0008_answer_freq.sql  0009_pavlov.sql  0010_pavlov_v2.sql  0011_pavlov_answer_cards.sql  0012_training_bundle.sql
backend/src/: adaptive.rs  answer_match.rs  blend.rs  blindspots.rs  config.rs  db.rs  error.rs  insights.rs  main.rs  openai.rs  pavlov.rs  srs.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/models/: coryat.rs  mastery.rs  mod.rs  question.rs  session.rs  study.rs  user.rs
backend/src/routes/: admin.rs  auth.rs  blindspots.rs  cards.rs  categories.rs  coryat.rs  drill.rs  insight.rs  mastery.rs  mock_test.rs  mod.rs  pavlov.rs  practice.rs  preferences.rs  primers.rs  questions.rs  quiz.rs  review.rs  stats.rs  study.rs
backend/static/: index.html
components/: AuthRestorer.tsx  SessionProvider.tsx
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
lib/: auth.ts  email.ts
prisma/: schema.prisma
scripts/: apply-migration.sh  migrate-add-coryat-games.ts  migrate-add-game-type-filters.ts  migrate-add-is-review-session.ts  (+4 more)
(+109 files in other folders)
